WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70300
r97693
caused 42 failures on the chromium mac bots
https://bugs.webkit.org/show_bug.cgi?id=70300
Summary
r97693 caused 42 failures on the chromium mac bots
Ojan Vafai
Reported
2011-10-17 20:03:35 PDT
http://trac.webkit.org/changeset/97693
I'm unable to reproduce this locally. Trying a clean build and a clobber on the bots. In the meantime, will mark these as failing to green the tree. The change itself is not platform-specific, so I'm not really sure what could possibly cause this to only fail on chromium-mac and not on any other port/platform. fast/html/details-mouse-click.html fast/ruby/base-shorter-than-text.html fast/table/038-vertical.html fast/table/auto-with-percent-height-vertical.html fast/table/border-collapsing/002-vertical.html fast/table/border-collapsing/004-vertical.html fast/table/border-collapsing/equal-precedence-resolution-vertical.html fast/table/height-percent-test-vertical.html fast/table/rowspan-paint-order-vertical.html fast/table/table-display-types-vertical.html fast/writing-mode/basic-vertical-line.html fast/writing-mode/english-lr-text.html fast/writing-mode/table-hit-test.html fast/writing-mode/vertical-font-fallback.html editing/selection/vertical-lr-ltr-extend-line-backward-br.html editing/selection/vertical-lr-ltr-extend-line-forward-br.html editing/selection/vertical-rl-ltr-extend-line-backward-br.html editing/selection/vertical-rl-ltr-extend-line-backward-p.html editing/selection/vertical-rl-ltr-extend-line-backward-wrap.html editing/selection/vertical-rl-ltr-extend-line-forward-br.html editing/selection/vertical-rl-ltr-extend-line-forward-p.html editing/selection/vertical-rl-ltr-extend-line-forward-wrap.html editing/selection/vertical-rl-rtl-extend-line-backward-br.html editing/selection/vertical-rl-rtl-extend-line-backward-p.html editing/selection/vertical-rl-rtl-extend-line-forward-br.html editing/selection/vertical-rl-rtl-extend-line-forward-p.html fast/backgrounds/background-leakage-transforms.html fast/css/focus-ring-multiline-writingmode-vertical.html fast/css/h1-in-section-elements.html fast/repaint/repaint-across-writing-mode-boundary.html fast/repaint/table-writing-modes-h.html fast/repaint/table-writing-modes-v.html fast/table/027-vertical.html fast/table/028-vertical.html fast/table/040-vertical.html fast/table/border-collapsing/rtl-border-collapsing-vertical.html fast/table/colspanMinWidth-vertical.html fast/table/growCellForImageQuirk-vertical.html fast/text/justify-ideograph-vertical.html fast/writing-mode/fallback-orientation.html fast/writing-mode/margin-collapse.html fast/writing-mode/text-orientation-basic.html
Attachments
Patch
(1.70 KB, patch)
2011-10-21 16:58 PDT
,
Ojan Vafai
tony
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2011-10-20 12:29:57 PDT
Turns out this is a 32 vs 64 bit issue. If I build chromium's DRT 64bit the tests pass. If I build it 32bit, the tests fail. I've reduce to the following one-line test case: <div style="height: 100px; width: 100px; -webkit-writing-mode: vertical-lr;" ></div> In 32bit, the body element has height 0 in the render dump. The thing that confuses me is that I've stepped though RenderBlock::layoutBlock and the height is always non-zero. So, I don't get where it would be set to 0.
Ojan Vafai
Comment 2
2011-10-21 16:58:04 PDT
Created
attachment 112045
[details]
Patch
Ojan Vafai
Comment 3
2011-10-21 17:10:01 PDT
Committed
r98173
: <
http://trac.webkit.org/changeset/98173
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug