r97693 caused 42 failures on the chromium mac bots https://bugs.webkit.org/show_bug.cgi?id=70300

Can't test this until https://bugs.webkit.org/show_bug.cgi?id=70660
is fixed. The fix for that bug will test this codepath as well though.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeBlockPreferredLogicalWidths):

Canonical link: https://commits.webkit.org/86852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98173 268f45cc-cd09-0410-ab3c-d52691b4dbfc